@@ -2,6 +2,7 @@ package fact.it.recipeservice.service;
 
 import fact.it.recipeservice.dto.*;
 import fact.it.recipeservice.model.Recipe;
+import fact.it.recipeservice.model.RecipeLineItem;
 import fact.it.recipeservice.repository.RecipeRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -9,7 +10,9 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,91 +26,84 @@ public class RecipeService {
     @Value("${ingredientservice.baseurl}")
     private String ingredientServiceBaseUrl;
 
-    @Value("${inventoryservice.baseurl}")
-    private String inventoryServiceBaseUrl;
+    @Value("${ratingservice.baseurl}")
+    private String ratingServiceBaseUrl;
 
-//    public boolean placeOrder(OrderRequest orderRequest) {
-//        Order order = new Order();
-//        order.setOrderNumber(UUID.randomUUID().toString());
-//
-//        List<OrderLineItem> orderLineItems = orderRequest.getOrderLineItemsDtoList()
-//                .stream()
-//                .map(this::mapToOrderLineItem)
-//                .toList();
-//
-//        order.setOrderLineItemsList(orderLineItems);
-//
-//        List<String> skuCodes = order.getOrderLineItemsList().stream()
-//                .map(OrderLineItem::getSkuCode)
-//                .toList();
-//
-//        InventoryResponse[] inventoryResponseArray = webClient.get()
-//                .uri("http://" + inventoryServiceBaseUrl + "/api/inventory",
-//                        uriBuilder -> uriBuilder.queryParam("skuCode", skuCodes).build())
-//                .retrieve()
-//                .bodyToMono(InventoryResponse[].class)
-//                .block();
-//
-//        boolean allProductsInStock = Arrays.stream(inventoryResponseArray)
-//                .allMatch(InventoryResponse::isInStock);
-//
-//        if(allProductsInStock){
-//            ProductResponse[] productResponseArray = webClient.get()
-//                    .uri("http://" + ingredientServiceBaseUrl + "/api/ingredient",
-//                            uriBuilder -> uriBuilder.queryParam("skuCode", skuCodes).build())
-//                    .retrieve()
-//                    .bodyToMono(ProductResponse[].class)
-//                    .block();
-//
-//            order.getOrderLineItemsList().stream()
-//                    .map(orderItem -> {
-//                        ProductResponse product = Arrays.stream(productResponseArray)
-//                                .filter(p -> p.getSkuCode().equals(orderItem.getSkuCode()))
-//                                .findFirst()
-//                                .orElse(null);
-//                        if (product != null) {
-//                            orderItem.setPrice(product.getPrice());
-//                        }
-//                        return orderItem;
-//                    })
-//                    .collect(Collectors.toList());
-//
-//            orderRepository.save(order);
-//            return true;
-//        } else {
-//            return false;
-//        }
-//    }
+    public boolean createRecipe(RecipeRequest recipeRequest) {
+        Recipe recipe = new Recipe();
+        recipe.setRecipeNumber(UUID.randomUUID().toString());
 
-//    public List<RecipeResponse> getAllRecipes() {
-//        List<Recipe> recipes = recipeRepository.findAll();
-//
-//        return recipes.stream()
-//                .map(recipe -> new RecipeResponse(
-//                        recipe.getRecipeNumber(),
-//                        mapToOrderLineItemsDto(order.getOrderLineItemsList())
-//                ))
-//                .collect(Collectors.toList());
-//    }
-//
-//    private OrderLineItem mapToOrderLineItem(OrderLineItemDto orderLineItemDto) {
-//        OrderLineItem orderLineItem = new OrderLineItem();
-//        orderLineItem.setPrice(orderLineItemDto.getPrice());
-//        orderLineItem.setQuantity(orderLineItemDto.getQuantity());
-//        orderLineItem.setSkuCode(orderLineItemDto.getSkuCode());
-//        return orderLineItem;
-//    }
-//
-//    private List<OrderLineItemDto> mapToOrderLineItemsDto(List<OrderLineItem> orderLineItems) {
-//        return orderLineItems.stream()
-//                .map(orderLineItem -> new OrderLineItemDto(
-//                        orderLineItem.getId(),
-//                        orderLineItem.getSkuCode(),
-//                        orderLineItem.getPrice(),
-//                        orderLineItem.getQuantity()
-//                ))
-//                .collect(Collectors.toList());
-//    }
+        List<RecipeLineItem> recipeLineItems = recipeRequest.getRecipeLineItemsDtoList()
+                .stream()
+                .map(this::mapToRecipeLineItem)
+                .toList();
+
+        recipe.setRecipeLineItemsList(recipeLineItems);
+
+        List<String> names = recipe.getRecipeLineItemsList().stream()
+                .map(RecipeLineItem::getName)
+                .toList();
+
+        RatingResponse[] ratingResponseArray = webClient.get()
+                .uri("http://" + ratingServiceBaseUrl + "/api/rating",
+                        uriBuilder -> uriBuilder.queryParam("name", names).build())
+                .retrieve()
+                .bodyToMono(RatingResponse[].class)
+                .block();
 
 
+        IngredientResponse[] ingredientResponseArray = webClient.get()
+                .uri("http://" + ingredientServiceBaseUrl + "/api/ingredient",
+                        uriBuilder -> uriBuilder.queryParam("name", names).build())
+                .retrieve()
+                .bodyToMono(IngredientResponse[].class)
+                .block();
+
+        recipe.getRecipeLineItemsList().stream()
+                .map(recipeItem -> {
+                    IngredientResponse ingredient = Arrays.stream(ingredientResponseArray)
+                            .filter(i -> i.getName().equals(recipeItem.getName()))
+                            .findFirst()
+                            .orElse(null);
+                    if (ingredient != null) {
+                        recipeItem.setQuantity(ingredient.getAmount());
+                        recipeItem.setUnit(ingredient.getMeasurementUnit());
+                    }
+                    return recipeItem;
+                })
+                .collect(Collectors.toList());
+
+        recipeRepository.save(recipe);
+        return true;
+    }
+
+    public List<RecipeResponse> getAllRecipes() {
+        List<Recipe> recipes = recipeRepository.findAll();
+
+        return recipes.stream()
+                .map(recipe -> new RecipeResponse(
+                        recipe.getRecipeNumber(),
+                        mapToRecipeLineItemsDto(recipe.getRecipeLineItemsList())
+                ))
+                .collect(Collectors.toList());
+    }
+
+    private RecipeLineItem mapToRecipeLineItem(RecipeLineItemDto recipeLineItemDto) {
+        RecipeLineItem recipeLineItem = new RecipeLineItem();
+        recipeLineItem.setName(recipeLineItemDto.getName());
+        recipeLineItem.setQuantity(recipeLineItemDto.getQuantity());
+        recipeLineItem.setUnit(recipeLineItemDto.getUnit());
+        return recipeLineItem;
+    }
+
+    private List<RecipeLineItemDto> mapToRecipeLineItemsDto(List<RecipeLineItem> recipeLineItems) {
+        return recipeLineItems.stream()
+                .map(orderLineItem -> new RecipeLineItemDto(
+                        orderLineItem.getId(),
+                        orderLineItem.getName(),
+                        orderLineItem.getUnit(),
+                        orderLineItem.getQuantity()
+                ))
+                .collect(Collectors.toList());
+    }
 }
